Fixed up the input for train game on mobile

--- a/train/train.css
+++ b/train/train.css
@@ -33,6 +33,12 @@
     color: var(--color-text);
 }
 
+input[type="number"]::-webkit-inner-spin-button, 
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
 .solutions{
     width: auto;
     height: auto;
